@@ -23,7 +23,7 @@ import org.bukkit.persistence.PersistentDataType;
 import org.bukkit.util.Vector;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 import static fr.openmc.core.features.city.sub.mascots.MascotsManager.DEAD_MASCOT_NAME;
 
@@ -33,12 +33,12 @@ public class MascotsDeathListener implements Listener {
         Entity entity = e.getEntity();
         Player killer = e.getEntity().getKiller();
 
-        if (!MascotUtils.isMascot(entity)) return;
+        if (!MascotUtils.canBeAMascot(entity)) return;
 
         PersistentDataContainer data = entity.getPersistentDataContainer();
-        String city_uuid = data.get(MascotsManager.mascotsKey, PersistentDataType.STRING);
+        UUID cityUUID = UUID.fromString(data.get(MascotsManager.mascotsKey, PersistentDataType.STRING));
 
-        City city = CityManager.getCity(city_uuid);
+        City city = CityManager.getCity(cityUUID);
 
         if (city == null) return;
 
@@ -66,9 +66,9 @@ public class MascotsDeathListener implements Listener {
             spawnFireworkExplosion(entity.getLocation());
 
             List<Player> nearbyEnemies = entity.getNearbyEntities(5, 5, 5).stream()
-                    .filter(ent -> ent instanceof Player)
-                    .map(ent -> (Player) ent)
-                    .collect(Collectors.toList());
+                    .filter(Player.class::isInstance)
+                    .map(Player.class::cast)
+                    .toList();
 
             for (Player player : nearbyEnemies) {
                 Vector direction = player.getLocation().toVector().subtract(entity.getLocation().toVector()).normalize();
@@ -78,7 +78,7 @@ public class MascotsDeathListener implements Listener {
 
             WarManager.endWar(war);
         } else {
-            // todo: systeme de vulnerabilité d'une ville, check si la ville attaqué est vulnérable, si oui la ville attaqué est supprimé
+            // TODO: système de vulnerabilité d'une ville, check si la ville attaquée est vulnérable, si oui la ville attaquée est supprimée
         }
     }
 
