@@ -60,7 +60,7 @@ public class ImpotCollection implements Listener {
 
             zombie.setShouldBurnInDay(false);
 
-            zombie.setMetadata("mayor:zombie", new FixedMetadataValue(OMCPlugin.getInstance(), city.getMayor().getUUID()));
+            zombie.setMetadata("mayor:zombie", new FixedMetadataValue(OMCPlugin.getInstance(), city.getMayor().getMayorUUID()));
         }
     }
 
@@ -68,15 +68,12 @@ public class ImpotCollection implements Listener {
 
     @EventHandler
     public void onEntityDamageByEntity(EntityDamageByEntityEvent event) {
-        if (!(event.getDamager() instanceof Zombie)) return;
-        if (!(event.getEntity() instanceof Player)) return;
-
-        Zombie zombie = (Zombie) event.getDamager();
-        Player victim = (Player) event.getEntity();
+        if (!(event.getDamager() instanceof Zombie zombie)) return;
+        if (!(event.getEntity() instanceof Player victim)) return;
 
         if (!zombie.hasMetadata("mayor:zombie")) return;
 
-        String ownerUuid = zombie.getMetadata("mayor:zombie").get(0).asString();
+        String ownerUuid = zombie.getMetadata("mayor:zombie").getFirst().asString();
         UUID uuid = UUID.fromString(ownerUuid);
         Player mayorPlayer = Bukkit.getPlayer(uuid);
         if (mayorPlayer == null) return;
@@ -89,7 +86,7 @@ public class ImpotCollection implements Listener {
                 return;
             }
 
-            BankManager.withdrawBankBalance(victim.getUniqueId(), amount);
+            BankManager.withdraw(victim.getUniqueId(), amount);
         } else {
             EconomyManager.withdrawBalance(victim.getUniqueId(), amount);
         }
@@ -103,11 +100,10 @@ public class ImpotCollection implements Listener {
 
         if (newTotal >= 5000) {
             for (Entity entity : victim.getWorld().getEntities()) {
-                if (entity instanceof Zombie) {
-                    Zombie z = (Zombie) entity;
+                if (entity instanceof Zombie z) {
 
                     if (!z.hasMetadata("mayor:zombie")) continue;
-                    String zOwnerUuid = z.getMetadata("mayor:zombie").get(0).asString();
+                    String zOwnerUuid = z.getMetadata("mayor:zombie").getFirst().asString();
                     if (!zOwnerUuid.equals(ownerUuid)) continue;
                     if (z.getTarget() != null && z.getTarget().getUniqueId().equals(victim.getUniqueId())) {
                         z.remove();
